3.5.0/_sources/gallery/userdemo/demo_gridspec03.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/userdemo/demo_gridspec03.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_userdemo_demo_gridspec03.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_userdemo_demo_gridspec03.py:


=============
GridSpec demo
=============

This example demonstrates the use of `.GridSpec` to generate subplots,
the control of the relative sizes of subplots with *width_ratios* and
*height_ratios*, and the control of the spacing around and between subplots
using subplot params (*left*, *right*, *bottom*, *top*, *wspace*, and
*hspace*).

.. GENERATED FROM PYTHON SOURCE LINES 12-51



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gallery/userdemo/images/sphx_glr_demo_gridspec03_001.png
         :alt: Controlling subplot sizes with width_ratios and height_ratios
         :srcset: /gallery/userdemo/images/sphx_glr_demo_gridspec03_001.png, /gallery/userdemo/images/sphx_glr_demo_gridspec03_001_2_0x.png 2.0x
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/userdemo/images/sphx_glr_demo_gridspec03_002.png
         :alt: Controlling spacing around and between subplots
         :srcset: /gallery/userdemo/images/sphx_glr_demo_gridspec03_002.png, /gallery/userdemo/images/sphx_glr_demo_gridspec03_002_2_0x.png 2.0x
         :class: sphx-glr-multi-img





.. code-block:: default


    import matplotlib.pyplot as plt
    from matplotlib.gridspec import GridSpec


    def annotate_axes(fig):
        for i, ax in enumerate(fig.axes):
            ax.text(0.5, 0.5, "ax%d" % (i+1), va="center", ha="center")
            ax.tick_params(labelbottom=False, labelleft=False)


    fig = plt.figure()
    fig.suptitle("Controlling subplot sizes with width_ratios and height_ratios")

    gs = GridSpec(2, 2, width_ratios=[1, 2], height_ratios=[4, 1])
    ax1 = fig.add_subplot(gs[0])
    ax2 = fig.add_subplot(gs[1])
    ax3 = fig.add_subplot(gs[2])
    ax4 = fig.add_subplot(gs[3])

    annotate_axes(fig)


    fig = plt.figure()
    fig.suptitle("Controlling spacing around and between subplots")

    gs1 = GridSpec(3, 3, left=0.05, right=0.48, wspace=0.05)
    ax1 = fig.add_subplot(gs1[:-1, :])
    ax2 = fig.add_subplot(gs1[-1, :-1])
    ax3 = fig.add_subplot(gs1[-1, -1])

    gs2 = GridSpec(3, 3, left=0.55, right=0.98, hspace=0.05)
    ax4 = fig.add_subplot(gs2[:, :-1])
    ax5 = fig.add_subplot(gs2[:-1, -1])
    ax6 = fig.add_subplot(gs2[-1, -1])

    annotate_axes(fig)

    plt.show()


.. _sphx_glr_download_gallery_userdemo_demo_gridspec03.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: demo_gridspec03.py <demo_gridspec03.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: demo_gridspec03.ipynb <demo_gridspec03.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
